fixes spacing

--- a/index.css
+++ b/index.css
@@ -228,7 +228,7 @@
     .contact {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-evenly;
         float: left;
         width: 90%;
         margin: 1% 1% 45px 1%;
